# Vanishing-Point-Consistency-for-Image-Generation

./: .gitignore  README.md  pyproject.toml
_archive/pcs_v1/configs/: pcs_eval_baseline.yaml  pcs_eval_local_to_global.yaml  phase3_separation.yaml
_archive/pcs_v1/consensus/: __init__.py  aggregation.py  compatibility.py  global_fit.py  graph.py  inconsistency.py  signatures.py
_archive/pcs_v1/corruption/: __init__.py  synthetic.py
_archive/pcs_v1/regional/: hypotheses.py
_archive/pcs_v1/scoring/: local_to_global.py
_archive/pcs_v1/scripts/: run_confound_analysis.py  run_pcs_eval.py  run_sanity_check.py  run_separation_experiment.py
_archive/pcs_v1/tests/: test_corruption.py  test_global_score_v3.py
configs/datasets/: prompt_pack.yaml
configs/experiments/: pcs_eval_local_to_global.yaml  pps_full_eval.yaml
scripts/: generate_images.py  prepare_dataset.py  run_pps_eval.py  validate_dataset.py
src/pcs/: __init__.py
src/pcs/applicability/: __init__.py  gate.py
src/pcs/consensus/: compatibility.py  global_fit.py  interfaces.py  signatures.py
src/pcs/detectors/: __init__.py  base.py  hawp_detector.py  opencv_lsd.py  registry.py
tests/: conftest.py
tests/unit/: test_applicability.py  test_baseline_scoring.py  test_compatibility.py  test_consensus_interfaces.py  test_field_consistency.py  test_focal_divergence.py  test_global_fit.py  test_hawp_detector.py  test_inconsistency.py  test_lines.py  test_local_to_global_scoring.py  test_patching.py  test_perspective_wrapper.py  test_pps_score.py  test_region_graph.py  test_vp_hypotheses.py
(+22 files in other folders)
